Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-128784

OpenGL context creation issues when D3D11 RHI is used (sic)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.8.1, 6.9.0 FF
    • 6.7.2
    • WebEngine
    • None
    • Windows
    • 7eeabd5a0 (dev), 3d8b9b486 (6.8), b350ed513 (6.7), f23959b6a (dev), 05875c434 (6.8)

      Despite the fact we use default D3D11 RHI backend on Windows, I encountered several issues related to OpenGL context creation in our users' reports.

      There are warnings:

      Failed to load and resolve WGL/OpenGL functions
      
      Failed to load opengl32sw (The specified module could not be found.)
      

      And even crashes on some older GPUs with the following call stack:

      ...
      ig11icd64.pdb
      0xbc9e2de9 + 77289
      ntdll.pdb
      0x35cdfc41 + 64577
      opengl32.pdb
      0x14bdca2f + 117295
      opengl32.pdb
      0x14cbb000 + 1028096
      opengl32.pdb
      0x14cbba90 + 1030800
      opengl32.pdb
      0x14bdcf40 + 118592
      opengl32.pdb
      0x14bdcad0 + 117456
      opengl32.pdb
      0x14bdd223 + 119331
      ntdll.pdb
      0x35cdfce8 + 64744
      qwindows.pdb
      QWindowsGLContext::updateObtainedParams(HDC__ *,int *) qwindowsglcontext.cpp:1192
      qwindows.pdb
      QWindowsGLContext::QWindowsGLContext(QOpenGLStaticContext *,QOpenGLContext *) qwindowsglcontext.cpp:1131
      qwindows.pdb
      QWindowsIntegration::createPlatformOpenGLContext(QOpenGLContext *) qwindowsintegration.cpp:426
      Qt6Gui.pdb
      QOpenGLContext::create() qopenglcontext.cpp:358
      Qt6WebEngineCore.pdb
      QtWebEngineCore::initialize() qtwebenginecoreglobal.cpp:84
      Qt6Core.pdb
      QCoreApplicationPrivate::init() qcoreapplication.cpp:919
      Qt6Gui.pdb
      QGuiApplicationPrivate::init() qguiapplication.cpp:1580
      Qt6Gui.pdb
      QGuiApplication::QGuiApplication(int &,char * *,int) qguiapplication.cpp:642
      

      In both cases the call stack leads us to QtWebEngineCore::initialize().

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt_webengine_team Qt WebEngine Team
            studiosus Vladimir Belyavsky
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: