Do not create shared OpenGL context when D3D11 RHI is used

We don't need shared OpenGL context when D3D11 RHI is used on Windows.
So we shouldn't even try to create it, otherwise we might encounter
unexpected side effects like warnings or even crashes when creating
OpenGL context on some older GPUs/drivers.

Fixes: QTBUG-128784
Pick-to: 6.7
Change-Id: I8f7a6dd7c5dd56c361a085c45fffb8dcfcfb722f
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>
(cherry picked from commit 7eeabd5a0103f7dde66814d6e49806a2f2a1cc20)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>